# Extractor-vehicle-plate-from-legal-Italian-docs

./: app.py  ocr_verification.py  plate_detection.py  pyproject.toml  readme.md  requirements.txt  utils_paths.py
